Added getting the avarage for voltage curent power and powerfactor